package ca.mcmaster.se2aa4.island.team105.map;

// observes changes in exploration data and notifies observers
public class TranslateSubject {
    // adds observers to list of observer
    public void addObserver(SubObserver subObserver) {
        // intentionally empty
    }
    // notifies all registered observers
    public void notifyObservers() {
        // intentionally empty
    }

}
